force-app/main/default/objects/test__c/fields/ValeurEDI__c.field-meta.xml
<CustomField>
    <fullName>ValeurEDI__c</fullName>
    <label>Valeur EDI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>