force-app/main/default/objects/test__c/fields/ValeurSalesforce__c.field-meta.xml
<CustomField>
    <fullName>ValeurSalesforce__c</fullName>
    <label>Valeur Salesforce</label>
    <length>12</length>
    <type>Text</type>
</CustomField>